@@ -1,4 +1,12 @@
 1.17 -> 2.0:
+    - devzero2000: check secure_getenv for glibc 2.17 
+      Use secure_getenv if it is available.
+      Fall back to __secure_getenv if it is not.
+      In glibc 2.17, __secure_getenv was renamed to secure_getenv.
+      So check also for it.
+      Reference:
+       http://sourceware.org/glibc/wiki/Tips_and_Tricks/secure_getenv
+       http://marc.info/?t=134192618500001&r=1&w=2
     - devzero2000: update the gettext version prereq
     - devzero2000: fix misspelling
       Fix misspelling using  http://github.com/lyda/misspell-check
